--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,6 @@ android {
 }
 
 dependencies {
+    compile project(':library:materialDesign')
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
